@startuml

title __NURSERY's Class Diagram__\n

  namespace edu.kis.vh.nursery {
    class edu.kis.vh.nursery.DefaultCountingOutRhymer {
        + total : int
        - numbers : int[]
        + callCheck()
        + countIn()
        + countOut()
        + getNumbers()
        + isFull()
        # peekaboo()
    }
  }
  

  namespace edu.kis.vh.nursery {
    class edu.kis.vh.nursery.FifoRhymer {
        + countOut()
    }
  }
  

  namespace edu.kis.vh.nursery {
    class edu.kis.vh.nursery.HanoiRhymer {
        - totalRejected : int
        + countIn()
        + getTotalRejected()
        + reportRejected()
        + setTotalRejected()
    }
  }
  

  edu.kis.vh.nursery.FifoRhymer -up-|> edu.kis.vh.nursery.DefaultCountingOutRhymer
  edu.kis.vh.nursery.FifoRhymer o-- edu.kis.vh.nursery.DefaultCountingOutRhymer : temp
  edu.kis.vh.nursery.HanoiRhymer -up-|> edu.kis.vh.nursery.DefaultCountingOutRhymer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
